@@ -1,4 +1,4 @@
-$Id: ChangeLog,v 1.181 2007-11-10 20:52:42 cmatsuoka Exp $
+$Id: ChangeLog,v 1.182 2007-11-11 01:10:36 cmatsuoka Exp $
 
 Stable versions
 ---------------
@@ -17,6 +17,7 @@ Stable versions
 	- fixed infinite loop control for jos-dr4k.xm (allows full replay
 	  time of 11:04 for Global Trash 3.mod, reported by Adric Riedel)
 	- use floating point period generation for the software mixer
+	- fix S3M tempo/bpm setting effect (fixes seaside_hotel.s3m)
 
 2.4.1 (20071029):
 	- fixed portamento after keyoff problem in metamorph_part_ii.xm
